{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "MenuControls",
            "id": "27317146-a47a-4444-b625-6e8be878e3e1",
            "actions": [
                {
                    "name": "Debug",
                    "type": "Button",
                    "id": "20556167-bd87-42fd-9759-6515c1d6463f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SendCommand",
                    "type": "Button",
                    "id": "fb4661ad-d51f-476b-b103-aa59b3a98172",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab46696f-67a5-4df6-8414-54d91ef0ac17",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Debug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "407a431e-8e4e-4e48-b73f-af06a688c9bc",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SendCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerControls",
            "id": "28041c4a-fe0f-4ee9-b0a9-7f6ae270efc2",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "523124dd-cf9a-4b83-99f8-89f4f6c4d5a2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "cdc69910-538d-47c9-97b3-2c81d9fb2426",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4bd54675-80f1-4e3f-830d-6fc3164cbf66",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "48e86e17-ec5f-4fb3-9cb3-9632863c8699",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2f3ca1f5-d993-451b-8e66-995f79f58959",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6d93a276-e2b0-45a5-994c-270071718379",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}